--- a/SpaceFlight.html
+++ b/SpaceFlight.html
@@ -34,12 +34,9 @@
         <nav
           class="navbar navbar-expand-lg bg-transparent navbar-dark container-fluid"
         >
-          <div class="container-fluid mt-3 nav-bar">
-            <a href="index.html" class="navbar-brand me-3"
-              ><img
-                class="img-logo"
-                src="./images/Logo/logo-obc-2021-darkbg.png"
-                alt="logo"
+          <div class="container-fluid mt-2 nav-bar">
+            <a href="index.html" class="navbar-brand me-2"
+              ><img class="img-logo" src="./images/Logo/logo.png" alt="logo"
             /></a>
             <button
               class="navbar-toggler"
