--- a/falcon9.html
+++ b/falcon9.html
@@ -35,12 +35,9 @@
         <nav
           class="navbar navbar-expand-lg bg-transparent navbar-dark container-fluid"
         >
-          <div class="container-fluid mt-3 nav-bar">
-            <a href="index.html" class="navbar-brand me-3"
-              ><img
-                class="img-logo"
-                src="./images/Logo/logo-obc-2021-darkbg.png"
-                alt="logo"
+          <div class="container-fluid mt-2 nav-bar">
+            <a href="index.html" class="navbar-brand me-2"
+              ><img class="img-logo" src="./images/Logo/logo.png" alt="logo"
             /></a>
             <button
               class="navbar-toggler"
@@ -494,13 +491,13 @@
         </div>
       </section>
     </div>
-      <footer>
-        <div class="itens-footer">
-          <span class="text-secondary"> Mateus Santiago &copy; 2022</span>
-          <a class="ms-3" href="#">GitHub</a>
-          <a class="ms-3" href="#">Linkedin</a>
-        </div>
-      </footer>
+    <footer>
+      <div class="itens-footer">
+        <span class="text-secondary"> Mateus Santiago &copy; 2022</span>
+        <a class="ms-3" href="#">GitHub</a>
+        <a class="ms-3" href="#">Linkedin</a>
+      </div>
+    </footer>
     <!-- Animation Script -->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
